force-app/main/default/objects/ucinn_ascendv2__Gift_Receipt_Filters__c/ucinn_ascendv2__Gift_Receipt_Filters__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Gift Receipt Filters</label>
</CustomObject>