force-app/main/default/objects/ucinn_ascendv2__Gift_Receipt_Filters__c/fields/ucinn_ascendv2__Gift_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Gift_Type__c</fullName>
    <label>Gift Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>