force-app/main/default/objects/ucinn_ascendv2__Gift_Receipt_Filters__c/fields/ucinn_ascendv2__Limit__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Limit__c</fullName>
    <label>Limit</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>