force-app/main/default/objects/ucinn_ascendv2__Gift_Receipt_Filters__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Deduction__c</columns>
    <columns>ucinn_ascendv2__Gift_Type__c</columns>
    <columns>ucinn_ascendv2__Limit__c</columns>
    <columns>ucinn_ascendv2__Tender_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>